--- a/templates/contactvoorkeuren-ap.j2
+++ b/templates/contactvoorkeuren-ap.j2
@@ -1,4 +1,4 @@
-{% extends "ap2.j2" %}
+{% extends "ap.j2" %}
 
 {% block summary %}
 <p>
@@ -37,3 +37,6 @@ Dergelijke bijkomende beperkingen kunnen de volgende elementen bevatten:</p>
 </p>  
 {% endblock %}
 
+{% block jsonld %}
+<p>Een herbruikbare JSON-LD context definitie voor dit applicatieprofiel is terug te vinden op: <a href="../../../context/contactvoorkeuren.jsonld" target="_blank">https://data.vlaanderen.be/context/contactvoorkeuren.jsonld</a></p>
+{% endblock %}
